# subshell

./: .gitignore  .tool-versions  DESIGN_DECISIONS.md  DEVELOPING.md  LICENSE  Makefile  README.md  SPEC.md  TESTING.md  bundle.py  justfile  pyproject.toml
assets/: test-fish-default-blankline.ansi  test-fish-default-blankline.decoded  test-fish-default-blankline.txt  test-fish-default.txt  test-fish-starship.ansi  test-fish-starship.txt  test-zsh-default-blankline.txt  test-zsh-default.ansi  test-zsh-default.decoded  test-zsh-ohmyzsh-blankline.ansi  test-zsh-ohmyzsh-blankline.decoded  test-zsh-ohmyzsh.txt  test-zsh-powerlevel10k.ansi  test-zsh-powerlevel10k.decoded  test-zsh-powerlevel10k.txt  test-zsh-starship.ansi  test-zsh-starship.decoded  test-zsh-starship.txt
demo/: 10-blankline.fish  Dockerfile.demo  compose.yml  oh-my-zsh.blankline.zshrc  oh-my-zsh.p10k.zsh  oh-my-zsh.p10k.zshrc  oh-my-zsh.sepline.zshrc  oh-my-zsh.zshrc
src/: subshell.py
tools/: ansi2txt.py  bundle.py  capture_prompts.py  prompter.py  termrec.py  verify-prompts.py
verified-prompts/: test-fish-default-blankline.ansi  test-fish-default-blankline.decoded  test-fish-default-prompt-custom.ansi  test-fish-default-prompt-custom.decoded  test-fish-default-prompt-custom.txt  test-fish-default-prompt-empty.ansi  test-fish-default-prompt-empty.decoded  test-fish-default-prompt-empty.txt  test-fish-default.ansi  test-fish-default.decoded  test-fish-starship-prompt-custom.ansi  test-fish-starship-prompt-custom.decoded  test-fish-starship-prompt-custom.txt  test-fish-starship-prompt-empty.ansi  (+33 more)
(+7 files in other folders)
