[project]
name = "subshell"
version = "0.1.0"
description = "Run subshells with a prompt marker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pexpect>=4.9.0",
    "pyte>=0.8.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-regressions>=2.5.0",
    "Pillow>=10.4.0",
    "numpy>=1.26.0",
]
